Fixed issue with product buttons being squashed with large descriptions. Fixed issue of the carts close togle not displaying on small screens when it displays fullscreen.

--- a/src/core/css/panel/media-product.css
+++ b/src/core/css/panel/media-product.css
@@ -1,3 +1,10 @@
+.fg-panel-cart-toggle {
+    display: inline-block;
+}
+.fg-medium .fg-panel-cart-toggle {
+    display: none;
+}
+
 .fg-media-product, .fg-media-product * {
     box-sizing: border-box;
 }
@@ -28,12 +35,15 @@
     visibility: visible;
 }
 .fg-media-product-header {
-    min-height: 32px;
+    min-height: fit-content;
     width: 100%;
     line-height: 22px;
-    padding: 0 10px 10px;
+    padding: 0 0 10px;
     font-weight: 600;
     font-size: large;
+}
+.fg-medium .fg-media-product-header {
+    padding-right: 30px;
 }
 .fg-media-product-body {
     max-height: 100%;
@@ -42,7 +52,7 @@
     border-width: 0;
     border-top-width: 1px;
     border-bottom-width: 1px;
-    padding: 10px;
+    padding: 10px 0;
     overflow: auto;
 }
 .fg-media-product-body h2 {
@@ -79,8 +89,8 @@
     text-decoration: none;
 }
 .fg-media-product-footer {
-    min-height: 42px;
-    padding: 10px;
+    min-height: fit-content;
+    padding: 10px 0 0;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -91,9 +101,13 @@
     margin: 0 0 3px 0;
     border-width: 1px;
     border-radius: 3px;
-    height: 32px;
-    line-height: 32px;
+    height: auto;
+    line-height: 28px;
+    min-height: fit-content;
     text-align: center;
+}
+.fg-media-product-footer .fg-panel-button:last-child {
+    margin-bottom: 0;
 }
 .fg-media-product-footer p {
     margin: 7px 3px 0;
